--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">TP2INF8405</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Maps</string>
+    <string name="maps_logo">App Logo</string>
+    <string name="about_member1">Dinh Huân Philippe Duong</string>
+    <string name="about_member2">Yassine Belkacemi</string>
+    <string name="about_member3">Simon Moreau</string>
+    <string name="about_member4">Aladji Faye</string>
+    <string name="about_group">Groupe 01</string>
+    <string name="about_version">Version 1.0.0</string>
 </resources>
