ajout mise à jour uplink/downlink/battery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="batteryLevel">Battery: </string>
+    <string name="UplinkVal">Upload: </string>
+    <string name="DownlinkVal">Download: </string>
 </resources>
