--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,6 +26,7 @@
     <string name="batteryLevel" translatable="true">Battery: </string>
     <string name="UplinkVal" translatable="true">Upload: </string>
     <string name="DownlinkVal" translatable="true">Download: </string>
+    <string name="lightVal" translatable="true">Light: </string>
     <string name="title_activity_main_view" translatable="true">MainView</string>
     <string name="LanguageSelect" translatable="true">Switch to French</string>
     <string name="Parameters" translatable="true">Parameters</string>
