--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,7 +29,7 @@
     <string name="lightVal" translatable="true">Light: </string>
     <string name="title_activity_main_view" translatable="true">MainView</string>
     <string name="LanguageSelect" translatable="true">Switch to French</string>
-    <string name="Parameters" translatable="true">Parameters</string>
+    <string name="Profile" translatable="true">Profile</string>
     <string name="homePage" translatable="true">Home page</string>
     <string name="connect" translatable="true">Connect</string>
     <string name="createAccount" translatable="true">Create an account</string>
