--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
 <string name="connect" translatable="true">Se connecter</string>
 <string name="createAccount" translatable="true">Créer un compte</string>
 <string name="lightVal" translatable="true">Lumière: </string>
+<string name="x_acc">accélération axe x:</string>
+<string name="y_acc">accélération axe y:</string>
+<string name="z_acc">accélération axe z:</string>
 </resources>
