Added language setup on first page init & fixed localization for createAcc page

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,6 +18,7 @@
     <string name="userNotInDB" translatable="true">This user does not exist.</string>
     <string name="userAlreadyInDB" translatable="true">This user already exists. Please choose another name.</string>
     <string name="profileUsername" translatable="true">Username: </string>
+    <string name="createAccountValidate" translatable="true">Validate</string>
     <string name="configChangePFP" translatable="true">Change profile picture</string>
     <string name="foundDevicesInfo" translatable="true">Devices found at :</string>
 
